<resources>
    <string name="app_name" translatable="false">TripTales</string>
    <string name="app_name_homepage" translatable="false">TRIPTALES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabTappe">Tappe</string>
    <string name="tabSpese">Spese</string>
    <string name="tabObiettivi">Obiettivi</string>
    <string name="tabAttivita">Lista</string>
    <string name="page_title">TripTales</string>
    <string name="action_home">Home</string>
    <string name="action_logout">Logout</string>
    <string name="fragment_tappe">fragment_tappe</string>
    <string name="fragment_obiettivi">fragment_obiettivi</string>
    <string name="fragment_expenses">fragment_expenses</string>
    <string name="fragment_checklist">fragment_checklist</string>
    <string name="checklist_fragment">checkList_fragment</string>
    <string name="obiettivi_fragment">obiettivi_fragment</string>
    <string name="spese_fragment">spese_fragment</string>
    <string name="tappe_fragment">tappe_fragment</string>
    <string name="budget">0</string>
    <string name="buttonEditDescription">Modifica</string>
    <string name="listaSpese">Tutte le spese</string>
    <string name="buttonSpese">Filtro</string>
    <string name="prova_spesa_descrizione">Mezzi di trasporto</string>
    <string name="prova_data_spesa">05/06/2022</string>
    <string name="spesa_amount">30€</string>
    <string name="add_button_spese_description">add button per le spese</string>
    <string name="percentualeSpesa">0 / 0 spesi (0%)</string>
    <string name="hintBudget">Importo</string>
    <string name="editBudgetTitle">Modifica budget</string>
    <string name="saveButton">Salva</string>
    <string name="titleBudgetCard">Budget</string>
    <string name="spesaDescription">Abbonamento settimanale</string>
    <string name="addSpesaCardTitle">Aggiungi spesa</string>
    <string name="hintDescription">Descrizione</string>
    <string name="hintCategoria">Categoria</string>
    <string name="hintDay">GG</string>
    <string name="hintMonth">MM</string>
    <string name="hintYear">AAAA</string>
    <string name="dataCompleta">%1$d/%2$d/%3$d</string>
    <string name="triptales">TripTales</string>
    <string name="page_1">Diari</string>
    <string name="page_2">Mappa</string>
    <string name="page_3">Calendario</string>
    <string name="snackbarErroreBudget">Imposta il budget!</string>
    <string name="firstHomePageText">Non hai ancora creato nessun diario, comincia la tua avventura!</string>
    <string name="tappe">Tappe</string>
    <string name="titolo_diario">Titolo Diario</string>
    <string name="aggiungi_una_tappa">Aggiungi una tappa</string>
    <string name="nome_tappa_hint">Nome tappa</string>
    <string name="inserisci_un_immagine">Inserisci un\'immagine</string>
    <string name="data_tappa_hint">Data tappa</string>
    <string name="anteprima_immagine">Anteprima immagine</string>
    <string name="pulsante_per_tornare_indietro">Pulsante per tornare indietro</string>
    <string name="pulsante_per_salvare_la_tappa">Pulsante per salvare la checkpoint</string>
    <string name="aggiungi_una_tappa_modificata">Aggiungi una checkpoint</string>
    <string name="nome_tappa_modificata">Nome checkpoint</string>
    <string name="inserisci_un_immagine_modifica">Inserisci un\'immagine</string>
    <string name="data_tappa_modificata">Data checkpoint</string>
    <string name="anteprima_immagine_modificata">Anteprima immagine</string>
    <string name="nome_tappa_card">Nome Tappa</string>
    <string name="nome_tappa">Nome Tappa</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pronto">Pronto a raccontare\nil tuo viaggio?</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="oppure">oppure</string>
    <string name="accedi_con_google">Accedi con Google</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="inserisci_la_tua_email">Inserisci la tua email</string>
    <string name="invia_email">Invia email</string>
    <string name="error_email_login">Controlla la tua email</string>
    <string name="error_password_signUp">La password deve essere lunga almeno 8 caratteri: almeno 1 lettera, 1 numero e 1 carattere speciale</string>
    <string name="benvenuto_nella_home">Benvenuto nella home</string>
    <string name="totalespesa">"Tot spesa della categoria: "</string>
    <string name="SeparatoreData">/</string>
    <string name="titleFilter">Filtro categoria</string>
    <string name="saveFilter">Filtra</string>
    <string name="obiettiviRaggiunti">Obiettivi raggiunti:</string>
    <string name="numObiettivi">%1$d/%2$d raggiunti</string>
    <string name="addButtonGoalsDescription">aggiungi un obiettivo</string>
    <string name="prova_goal_descrizione">Visitare il Louvre</string>
    <string name="aggiungi_obiettivo">Nuovo obiettivo</string>
    <string name="addItemButtonDescription">aggiungi un elemento alla lista</string>
    <string name="action_account">action_account</string>
    <string name="in_corso">In corso</string>
    <string name="fatto">Fatto</string>
    <string name="nuovo_compito">Nuovo elemento</string>
    <string name="noTasksString">Aggiungi il primo elemento della lista!</string>
    <string name="noGoalsString">Aggiungi il primo obiettivo del viaggio!</string>
    <string name="noSpeseString">Imposta il budget e aggiungi la prima spesa!</string>
    <string name="checklistTitle">Non devo dimenticarmi di:</string>
    <string name="warningCurrency">*Puoi cambiare la valuta solamente se non hai ancora inserito nessuna spesa.</string>
    <string name="hintCurrency">Valuta*</string>
    <string name="nome_diario">Nome diario</string>
    <string name="google_maps_api_key">YOUR_GOOGLE_MAPS_API_KEY</string>
    <string name="intro1_title">Benvenuto su TripTales Il tuo diario di viaggio personale</string>
    <string name="intro1_body">Racconta i tuoi viaggi e cattura i tuoi ricordi</string>
    <string name="intro3_title">Esplora il mondo e custodisci ogni tappa</string>
    <string name="intro3_body">Con TripTales potrai annotare ogni scoperta e rivivere ogni momento</string>
    <string name="intro4_title">Viaggia sereno: TripTales ti aiuta a ricordare ogni dettaglio</string>
    <string name="intro4_body">Tappe, obiettivi, spese e check-list: tutto ciò che serve per un viaggio perfetto, senza dimenticanze</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="inizia">INIZIA</string>
    <string name="data_partenza">Data partenza</string>
    <string name="data_arrivo">Data ritorno</string>
    <string name="scegli_immagine">Scegli un’immagine</string>
    <string name="inserisci_nome_diario">Inserisci il nome del diario</string>
    <string name="paese_visitato">Inserisci il paese visitato</string>
    <string name="files" translatable="false">Files</string>
    <string name="immagineSelezionata">Immagine selezionata</string>
    <string name="error_unexpected">Errore imprevisto</string>
    <string name="error_google_login">Errore di accesso con Google</string>
    <string name="error_email_required">Errore: email obbligatoria</string>
    <string name="error_email_invalid">Errore: email non valida</string>
    <string name="password_reset_email_sent">Email per il reset della password inviata</string>
    <string name="registrati_con_google">Registrati con Google</string>
    <string name="nome_user_momentaneo">Nome Cognome</string>
    <string name="modalita_scura">Modalità scura</string>
    <string name="notiche">Notifiche</string>
    <string name="privacy">Privacy</string>
    <string name="lingua">Lingua</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">M</string>
    <string name="material_calendar_thursday">G</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>
    <string name="material_calendar_today_button">Oggi</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancella</string>
    <string name="aggiungi_diario">Aggiungi Diario</string>
    <string name="snackbarExpenseAdded">Spesa aggiunta</string>
    <string name="snackbarExpenseUpdated">Spesa aggiornata</string>
    <string name="snackbarExpenseDeleted">Spesa rimossa</string>
    <string name="snackbarExpenseNotDeleted">Errore: spesa non rimossa</string>
    <string name="snackbarGoalAdded">Obiettivo aggiunto</string>
    <string name="snackbarGoalUpdated">Obiettivo aggiornato</string>
    <string name="snackbarGoalDeleted">Obiettivo rimosso</string>
    <string name="snackbarGoalNotDeleted">Errore: obiettivo non rimosso</string>
    <string name="snackbarTaskAdded">Elemento aggiunto</string>
    <string name="snackbarTaskUpdated">Elemento aggiornato</string>
    <string name="snackbarTaskDeleted">Elemento rimosso</string>
    <string name="snackbarTaskNotDeleted">Errore: elemento non rimosso</string>
    <string name="snackbarDiaryAdded">Diario aggiunto</string>
    <string name="snackbarDiaryUpdated">Diario aggiornato</string>
    <string name="snackbarDiaryDeleted">Diario rimosso</string>
    <string name="snackbarDiaryNotDeleted">Errore: diario non rimosso</string>
    <string name="errorFilterExpenses">Scegli una categoria</string>
    <string name="errorFilterCategory">Nessuna spesa trovata per la categoria specificata</string>
    <string name="errorAmount">Inserisci un importo</string>
    <string name="errorDescription">Inserisci una descrizione</string>
    <string name="errorDay">Inserisci un giorno</string>
    <string name="errorInputDay">Giorno inserito non corretto</string>
    <string name="errorMonth">Inserisci un mese</string>
    <string name="errorInputMonth">Mese inserito non corretto</string>
    <string name="errorYear">Inserisci un anno</string>
    <string name="errorInputYear">Anno inserito non corretto</string>
    <string name="errorBudget">Inserisci un budget</string>
    <string name="errorCurrency">Scegli una valuta</string>
    <string name="errorInputBudget">Inserisci un numero più basso</string>
    <string name="errorGoalName">Inserisci il nome dell\'obiettivo</string>
    <string name="errorTaskName">Inserisci il nome dell\'elemento</string>
    <string name="progressText">spesi</string>
    <string name="modifica_password">Modifica password</string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="modifica_email">Modifica email</string>
    <string name="vecchia_email">Vecchia email</string>
    <string name="nuova_email">Nuova email</string>
    <string name="italiano">Italiano</string>
    <string name="inglese">Inglese</string>
    <string name="s">Sì</string>
    <string name="no">No</string>
    <string name="vuoi_aggiungere_questo_luogo_alle_tappe">Vuoi aggiungere questo luogo alle tappe?</string>
    <string name="delete_expense">Elimina la spesa</string>
    <string name="delete_expense_description">Sei sicuro di voler eliminare la spesa?</string>
    <string name="cancel">Annulla</string>
    <string name="delete">Elimina</string>
</resources>