<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/airplane_cabin_cartoon_scene"
    tools:context=".ui.login.fragment.SignInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9D9D9"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/nome" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNome"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/cognome" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCognome"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background_login"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signInButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/registrati"
            android:textColor="#000000"
            app:backgroundTint="#B57F63" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/oppure"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/signInButtonGoogle"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accedi_con_google"
            android:layout_gravity="center"
            app:icon="@drawable/google_png19635"
            app:iconGravity="textStart"
            app:iconTint="@null"
            android:layout_marginBottom="30dp"
            />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>