<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardAddBudget"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    android:backgroundTint="@color/background_overlays"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:id="@+id/deleteText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/delete_expense"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
            android:id="@+id/deleteDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/delete_expense_description"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/primary"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/secondary"
                android:text="@string/delete"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>