<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardAddCheckpoint"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="200dp"
    android:backgroundTint="@color/background_overlays"
    app:cardCornerRadius="20dp"
    android:elevation="100dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/vuoi_aggiungere_questo_luogo_alle_tappe"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/background_overlays"
            android:hint="@string/nome"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/primary" />

        <Button
            android:id="@+id/noAnswer"
            android:layout_width="83dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|center"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/secondary"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/yesAnswer"
            android:layout_width="83dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|center"
            android:layout_marginStart="91dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/secondary"
            android:text="@string/s"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>